# SR-CoD4x

./: CMakeLists.txt  README.md  compile.bat  compile.sh  install.sh
src/: bg_jump.cpp  cm_public.h  cmd.c  cmd.h  dobj.h  sv_bot.c  sv_ingameadmin.c  sv_main.c  sv_world.cpp
src/asmsource/: _bg_pmove.asm  _g_active_mp.asm
src/bspc/: be_aas_bspc.c
src/sr/: CMakeLists.txt  vcpkg.json
src/sr/cmake/: FindGLM.cmake
src/sr/src/: API.cpp  API.hpp  Application.cpp  Base.hpp  CMakeLists.txt  Common.hpp  Macros.hpp
src/sr/src/Audio/: Speex.hpp  Streamable.hpp  Voice.cpp
src/sr/src/Commands/: Command.hpp  Demo.cpp  Game.cpp  Player.cpp
src/sr/src/Game/: CMakeLists.txt  Map.cpp  Map.hpp  Server.cpp  Server.hpp
src/sr/src/Game/Demo/: CMakeLists.txt  Demo.cpp  Demo.hpp  DemoContainer.cpp  DemoContainer.hpp  DemoPlayer.cpp  DemoPlayer.hpp  DemoRecord.cpp  DemoRecord.hpp
src/sr/src/Game/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp
src/sr/src/Game/Player/: CMakeLists.txt  PMove.cpp  PMove.hpp  Player.cpp  Player.hpp
src/sr/src/Game/Player/Movements/: CMakeLists.txt  CS.cpp  CS.hpp  CoD4.cpp  CoD4.hpp  Q3.cpp  Q3.hpp
src/sr/src/System/: Async.hpp  CMakeLists.txt  Debug.cpp  Debug.hpp  Environment.cpp  Environment.hpp  Netchan.cpp  Netchan.hpp  Vegas.cpp  Vegas.hpp
src/sr/src/Utils/: CMakeLists.txt  Log.hpp  Math.hpp  Ref.hpp
